# life_os

./: .gitignore  API.md  Cargo.toml
client/: Cargo.toml
client/src/: app_root.rs  main.rs  surf_client.rs  workspace.rs
client/src/accounts/: mod.rs  model.rs  service.rs  view.rs
client/src/accounts/create/: mod.rs
client/src/auth/: mod.rs  model.rs  service.rs  view.rs
client/src/components/: confirm_dialog.rs  mod.rs
client/src/state/: mod.rs
docs/: GPUI 完整入门教程：从安装到打包你的第一个桌面应用 - 全栈开发.md  Getting Started  GPUI Component.md  Installation  GPUI Component.md  gpui.md
server/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241206_000001_create_account.rs  m20241206_000002_create_transaction.rs  m20241206_000003_create_holdings.rs  m20251206_070442_add_balance_to_account.rs  m20251206_071653_add_deleted_at_to_account.rs
server/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  routes.rs  state.rs
server/src/entities/: account.rs  holdings.rs  mod.rs  prelude.rs  transaction.rs  user.rs
server/src/handlers/: account.rs  auth.rs  holdings.rs  mod.rs  test.rs  transaction.rs
server/src/middleware/: auth.rs
server/src/services/: account.rs  auth.rs  holdings.rs  mod.rs  transaction.rs
server/src/services/notify/: email.rs  feishu.rs  mod.rs  multi.rs  noop.rs
server/src/utils/: jwt.rs
server/tests/: account_test.rs  auth_api_test.rs
server/tests/common/: mod.rs
