[package]
name = "client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0-preview2"
gpui-component-assets = "0.5.0-preview2"
gpui_http_client = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
http = "1.0"
futures = "0.3"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rfd = "0.16.0"
