[package]
name = "server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "tokio1-rustls-tls", "smtp-transport"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
